chore: loaded data, responsive designs

--- a/src/components/WelcomeBanner/WelcomeBanner.module.scss
+++ b/src/components/WelcomeBanner/WelcomeBanner.module.scss
@@ -7,6 +7,10 @@
   flex-direction: column;
 }
 
+// .container {
+//   padding-inline: 1.5rem;
+// }
+
 .heading {
   @extend  .heading__700;
   font-weight: 700;
