--- a/src/components/WelcomeSection/WelcomeSection.module.scss
+++ b/src/components/WelcomeSection/WelcomeSection.module.scss
@@ -73,14 +73,17 @@
   border: 1px solid $opacity-12;
   backdrop-filter: blur(40px);
   width: 100%;
-  min-width: 300px;
+  min-width: 250px;
   min-height: 340px;
-  padding: 1.5rem;
+  padding: 1rem 0.7rem;
 
   display: flex;
   flex-flow: row wrap;
   gap: 1.5rem;
 
+  @media (min-width: 912px) {
+    padding: 2rem;
+  }
   @media (min-width: 1280px) {
     padding: 3rem;
   }
