--- a/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
+++ b/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
@@ -1,7 +1,9 @@
 @import '@/styles/_colors.scss';
 @import '@/styles/_typography.scss';
 
-.overlay, .link, .info, .count {
+$card_height: 14rem;
+
+.overlay, .link, .info, .count, .card_item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,9 +12,11 @@
 .wrapper {
   width: 100%;
   min-width: 224px;
-  max-width: 224px;
+  max-width: 250px;
   flex: 1;
   margin-bottom: 1rem;
+  position: relative;
+  margin-inline: auto;
 
   .info {
     justify-content: space-between;
@@ -42,12 +46,11 @@
   
   
   .card {
-    position: relative;
     width: 100%;
-    height: 224px;
+    height: $card_height;
     overflow-y: auto;
     scrollbar-width: none;
-    padding: 1.5rem 1.5rem 0;
+    padding: 1.5rem 1.5rem;
     background: $opacity-08;
     border: 1px solid $opacity-08;
     &::-webkit-scrollbar { 
@@ -59,11 +62,11 @@
     .overlay {
       opacity: 0;
       position: absolute;
-      top: 0;
+      top: 2.3rem;
       left: 0;
-      width: 100%;
-      height: 100%;
-      background: $opacity-08;
+      bottom: 0;
+      right: 0;
+      background: $overlay-08;
       border: 1px solid $white;
       backdrop-filter: blur(4px);
   
@@ -81,11 +84,22 @@
       border-radius: 0.75rem;
       transition: all 0.2s ease-in-out;
   }
-  
-    &:hover {
-      .overlay {
-        opacity: 1;
+
+    display: inline-grid;
+    grid-template-columns: repeat(4, 2rem);
+    gap: 1rem;
+    grid-auto-rows: 2rem;
+    justify-content: center;
+
+    .card_item {
+      height: 2rem;
+      background: $white;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
       }
+      border-radius: 0.5rem;
     }
   }
 
@@ -101,6 +115,18 @@
     .count {
       color: $black;
     }
+
+    .overlay {
+      opacity: 1;
+    }
+  }
+
+  @media (min-width: 820px) {
+    margin-inline: 0;
+  }
+
+  @media (min-width: 1200px) {
+    max-width: 224px;
   }
 }
 
