chore: icon more visible

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,7 @@ $bg: #1A1C1F;
 $opacity-04: rgba(255, 255, 255, 0.04);
 $opacity-08: rgba(255, 255, 255, 0.08);
 $opacity-12: rgba(255, 255, 255, 0.12);
+$opacity-40: rgba(255, 255, 255, 0.40);
 $opacity-40B: rgba(90, 169, 242, 0.4);
 $opacity-40BG: rgba(33, 44, 59, 0.4);
 
