--- a/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
+++ b/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
@@ -113,7 +113,8 @@ $card_height: 14rem;
     }
 
     .count {
-      color: $black;
+      background: $white;
+      color: $neutral-800;
     }
 
     .overlay {
@@ -128,5 +129,7 @@ $card_height: 14rem;
   @media (min-width: 1200px) {
     max-width: 224px;
   }
+
+  transition: all 0.2s ease-in-out;
 }
 
