--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -13,7 +13,7 @@
   transition: all 0.2s ease-in-out;
   text-align: center;
   padding: 0.5rem;
-  background-color: $opacity-04;
+  background: $opacity-04;
   position: relative;
   
   &__small {
@@ -77,6 +77,7 @@
 
 
    &.animate_favourite {
+    background: $opacity-40B;
     animation-name: favourite_card;
     animation-duration: 1s;
     animation-iteration-count: 1;
