chore: tooltip max width set

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -36,6 +36,7 @@ svg {
   font-size: 0.75rem;
   font-weight: 500;
   padding: 0.75rem;
+  max-width: 21.75rem!important;
 }
 
 .react-tooltip-lite-arrow {
