--- a/src/styles/Map.module.scss
+++ b/src/styles/Map.module.scss
@@ -4,6 +4,34 @@
   max-width: 1276px;
   margin: 2rem auto 20rem;
   padding-inline: 1rem;
+
+  &:after {
+    content: "";
+    background: linear-gradient(154.04deg, rgba(197, 111, 218, 0.4) 50.14%, rgba(197, 111, 218, 0) 135.59%);
+    filter: blur(11.5rem);
+    transform: rotate(-90deg);
+    width: 100%;
+    height: 100%;
+    max-width: 23.3125rem;
+    max-height: 23.3125rem;
+    position: fixed;
+    top: 205px;
+    left: 40%;
+  }
+  &:before {
+    content: "";
+    background: radial-gradient(31.63% 31.63% at 42.81% 48.91%, rgba(141, 139, 235, 0.7) 0%, rgba(46, 43, 166, 0.7) 100%) ;
+    filter: blur(11.5rem);
+    transform: rotate(151.27deg);
+    background-size: auto;
+    width: 100%;
+    height: 100%;
+    max-width: 33.65375rem;
+    max-height: 37.64125rem;
+    position: fixed;
+    top: 0;
+    left: 60%;
+  }
 }
 .accordion_contents {
     display: flex;
