--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -38,6 +38,7 @@ svg {
   font-size: 0.75rem;
   font-weight: 500;
   padding: 0.75rem;
+  max-width: 18.75rem!important;
 }
 
 .react-tooltip-lite-arrow {
