--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -15,6 +15,7 @@
     position: absolute;
     left: -60%;
     top: 0%;
+    z-index: -1;
   }
   &:before {
     content: "";
@@ -26,6 +27,7 @@
     position: absolute;
     left: -60%;
     top: 10%;
+    z-index: -1;
   }
 }
 
