--- a/src/styles/Map.module.scss
+++ b/src/styles/Map.module.scss
@@ -17,6 +17,7 @@
     position: fixed;
     top: 205px;
     left: 40%;
+    z-index: -1;
   }
   &:before {
     content: "";
@@ -31,6 +32,7 @@
     position: fixed;
     top: 0;
     left: 60%;
+    z-index: -1;
   }
 }
 .accordion_contents {
