Fixed gradient background welcome page (#245)
* in progress

* chore: gradient on welcome page

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -4,6 +4,31 @@
   max-width: 1276px;
   margin: 6.8125rem auto 0;
   color: $opacity-12;
+
+  &:after {
+    content: "";
+    background: radial-gradient(31.63% 31.63% at 42.81% 48.91%, rgba(208, 21, 239, 0.7) 0%, rgba(166, 43, 154, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    opacity: 0.1;
+    transform: rotate(151.27deg);
+    width: 871.9px;
+    height: 975.2px;
+    position: absolute;
+    left: -60%;
+    top: 0%;
+    z-index: -1;
+  }
+  &:before {
+    content: "";
+    background: radial-gradient(31.63% 31.63% at 42.81% 48.91%, rgba(21, 112, 239, 0.7) 0%, rgba(46, 43, 166, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    opacity: 0.3;
+    transform: rotate(151.27deg);
+    width: 1628.73px;
+    height: 1821.69px;
+    position: absolute;
+    left: -60%;
+    top: 10%;
+    z-index: -1;
+  }
 }
 
 .wrapper {
