--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -36,6 +36,10 @@
   gap: 2rem;
   padding-inline: 1.5rem;
   overflow-x: hidden;
+
+  @media (min-width: 1280px) {
+    padding-inline: 0.8rem;
+  }
 }
 
 .banner {
@@ -46,7 +50,7 @@
 .contents {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
   gap: 2rem;
 }
 
