chore: cleaning ups

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -10,10 +10,10 @@
     background: radial-gradient(31.63% 31.63% at 42.81% 48.91%, rgba(21, 112, 239, 0.7) 0%, rgba(46, 43, 166, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
     opacity: 0.5;
     transform: rotate(151.27deg);
-    width: 1442.68px;
-    height: 1613.6px;
+    width: 90.1675rem;
+    height: 100.85rem;
     position: fixed;
-    right: -25rem;
+    right: -23rem;
     top: -50rem;
     z-index: -1;
   }
