--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -5,16 +5,33 @@
   margin: 6.8125rem auto 0;
   color: $opacity-12;
 
+  &:after {
+    content: "";
+    background: linear-gradient(154.04deg, rgba(197, 111, 218, 0.4) 50.14%, rgba(197, 111, 218, 0) 135.59%);
+    filter: blur(11.5rem);
+    transform: rotate(-90deg);
+    width: 100%;
+    height: 100%;
+    max-width: 23.3125rem;
+    max-height: 23.3125rem;
+    position: fixed;
+    top: 205px;
+    left: 40%;
+    z-index: -1;
+  }
   &:before {
     content: "";
-    background: radial-gradient(31.63% 31.63% at 42.81% 48.91%, rgba(21, 112, 239, 0.7) 0%, rgba(46, 43, 166, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
-    opacity: 0.5;
+    background: radial-gradient(31.63% 31.63% at 42.81% 48.91%, rgba(141, 139, 235, 0.7) 0%, rgba(46, 43, 166, 0.7) 100%) ;
+    filter: blur(11.5rem);
     transform: rotate(151.27deg);
-    width: 90.1675rem;
-    height: 100.85rem;
+    background-size: auto;
+    width: 100%;
+    height: 100%;
+    max-width: 33.65375rem;
+    max-height: 37.64125rem;
     position: fixed;
-    right: -23rem;
-    top: -50rem;
+    top: 0;
+    left: 60%;
     z-index: -1;
   }
 }
