--- a/src/components/WelcomeBanner/WelcomeBanner.module.scss
+++ b/src/components/WelcomeBanner/WelcomeBanner.module.scss
@@ -15,6 +15,14 @@
 
 .content {
   flex: 1;
+  margin-left: 2rem;
+
+  @media (min-width: 1024px) {
+    flex: 0 40%;
+  }
+  @media (min-width: 1276px) {
+    flex: 0;
+  }
 }
 
 .heading_container {
@@ -29,6 +37,10 @@
   font-weight: 600;
   color: $white;
   margin: 1rem 0 3rem;
+
+  @media (min-width: 768px) {
+    margin: 1rem 0 1.5rem;
+  }
 }
 
 .label {
