--- a/src/components/WelcomeBanner/WelcomeBanner.module.scss
+++ b/src/components/WelcomeBanner/WelcomeBanner.module.scss
@@ -13,10 +13,24 @@
   align-items: center;
 }
 
+.content {
+  flex: 1;
+  @media (min-width: 760px) {
+    margin-left: 2rem;
+  }
+
+  @media (min-width: 1024px) {
+    flex: 0 40%;
+  }
+  @media (min-width: 1276px) {
+    flex: 0;
+  }
+}
+
 .heading_container {
   width: 100%;
   
-  @media (min-width: 1276px) {
+  @media (min-width: 760px) {
     max-width: 27.25rem;
   }
 }
@@ -25,6 +39,10 @@
   font-weight: 600;
   color: $white;
   margin: 1rem 0 3rem;
+
+  @media (min-width: 768px) {
+    margin: 1rem 0 1.5rem;
+  }
 }
 
 .label {
