--- a/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
+++ b/src/components/WelcomeSectionCard/WelcomeSectionCard.module.scss
@@ -1,5 +1,6 @@
 @import '@/styles/_colors.scss';
 @import '@/styles/_typography.scss';
+@import '@/styles/_breakPoints.scss';
 
 $card_height: 14rem;
 
@@ -136,7 +137,7 @@ $card_height: 14rem;
     transform: rotate(90deg);
     bottom: -2.5rem;
     left: 47%;
-    @media (min-width: 768px) {
+    @media (min-width: $tablet) {
       right: -1.6rem;
       top: 53%;
       bottom: unset;
@@ -145,27 +146,19 @@ $card_height: 14rem;
     }
 }
 
-  @media (min-width: 820px) {
+  @media (min-width: $tablet) {
     max-width: 250px;
   }
 
-  @media (min-width: 900px) {
+  @media (min-width: $laptop) {
     max-width: 270px;
   }
 
-  @media (min-width: 1020px) {
-    max-width: 300px;
-  }
-
-  @media (min-width: 1040px) {
-    max-width: 224px;
-  }
-
-  @media (min-width: 1080px) {
+  @media (min-width: $laptop) and (max-width: $desktop) {
     max-width: 250px;
   }
 
-  @media (min-width: 1200px) {
+  @media (min-width: $desktop) {
     max-width: 270px;
   }
 
@@ -175,12 +168,20 @@ $card_height: 14rem;
       }
   }
 
-  @media (min-width: 540px) {
+  
+  @media (min-width: $mobile-lg){
     &::after {
       display: none;
     }
   }
-  @media (min-width: 1040px) {
+
+  @media (max-width: $laptop) {
+    &::after {
+      display: none;
+    }
+  }
+ 
+  @media (min-width: $laptop) and (max-width: $xl) {
     &::after {
       display: block;
     }
@@ -191,7 +192,12 @@ $card_height: 14rem;
       }
     }
   }
-  @media (min-width: 1276px) {
+
+  @media (min-width: $xl) {
+
+    &::after {
+      display: block;
+    }
 
     &:nth-child(3n+3), &:nth-child(4n+4), &:last-child {
       &::after {
@@ -202,6 +208,12 @@ $card_height: 14rem;
       &::after {
         display: none;
       }
+    }
+  }
+
+  @media (max-width: $mobile-lg){
+    &::after {
+      display: block;
     }
   }
 
