--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,7 +1,8 @@
 @import './colors';
+@import './_breakPoints.scss';
 
 .container {
-  max-width: 1276px;
+  max-width: $xl;
   margin: 6.8125rem auto 0;
   color: $opacity-12;
 
@@ -44,7 +45,7 @@
   padding-inline: 1.5rem;
   overflow-x: hidden;
 
-  @media (min-width: 1280px) {
+  @media (min-width: $xl) {
     padding-inline: 0.8rem;
   }
 }
