--- a/src/components/Blockchains/Blockchains.module.scss
+++ b/src/components/Blockchains/Blockchains.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/colors.scss';
 @import '@/styles/typography.scss';
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .container {
   margin: auto;
