--- a/src/components/NavItem/NavItem.module.scss
+++ b/src/components/NavItem/NavItem.module.scss
@@ -1,5 +1,5 @@
 @import '@/styles/colors.scss';
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .navItem {
   border: 1px solid $opacity-40B;
