--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,6 +1,6 @@
 @import "@/styles/_typography.scss";
 @import "@/styles/colors.scss";
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .container {
    background: $neutral-950;
