--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,5 +1,5 @@
 @import '@/styles/colors.scss';
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .search {
   display: flex;
