--- a/src/components/Search/SearchResult/SearchResult.module.scss
+++ b/src/components/Search/SearchResult/SearchResult.module.scss
@@ -1,6 +1,6 @@
 @import "@/styles/_colors.scss";
 @import "@/styles/_typography.scss";
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .results {
   position: absolute;
