--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/_colors.scss';
 @import "@/styles/_typography.scss";
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .container {
   border: 1px solid $opacity-08;
