--- a/src/styles/Map.module.scss
+++ b/src/styles/Map.module.scss
@@ -1,5 +1,5 @@
 @import './colors';
-@import '@/styles/_breakPoints.scss';
+@import '@/styles/_breakpoints.scss';
 
 .container {
   max-width: $xl;
