Separation arrow responsiveness homepage (#265)
* chore: arrow shows where expected

* chore: cleaning ups, more responsive cards to look better on smaller screens

* addded break points

* replaced others with breakpoint values

* fix: typo

--- a/src/components/Blockchains/Blockchains.module.scss
+++ b/src/components/Blockchains/Blockchains.module.scss
@@ -1,5 +1,6 @@
 @import '@/styles/colors.scss';
 @import '@/styles/typography.scss';
+@import '@/styles/_breakpoints.scss';
 
 .container {
   margin: auto;
@@ -22,7 +23,7 @@
     }
   }
 
-  @media (min-width: 1024px) {
+  @media (min-width: $laptop) {
     padding: 4rem 0;
 
     .contents * {
