--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/colors.scss';
+@import '@/styles/_breakpoints.scss';
 
 .search {
   display: flex;
@@ -8,7 +9,7 @@
   margin: 10px auto;
   padding-inline: 1rem;
 
-  @media (min-width: 1276px) {
+  @media (min-width: $xl) {
     padding-inline: 0;
   }
 
