--- a/src/styles/Map.module.scss
+++ b/src/styles/Map.module.scss
@@ -50,3 +50,19 @@
       position: relative;
     }
   }
+
+  .loading_page {
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: $opacity-12;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $white;
+    font-size: 1rem;
+    z-index: 99999;
+  }
