--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -3,6 +3,7 @@ $mobile-md: 480px;
 $mobile-lg: 540px;
 $tablet: 768px;
 $laptop: 1024px;
+$laptop-md: 1040px;
 $desktop: 1200px;
 $xl: 1276px;
 $xxl: 1376px;
