--- a/src/components/WelcomeBanner/WelcomeBanner.module.scss
+++ b/src/components/WelcomeBanner/WelcomeBanner.module.scss
@@ -64,14 +64,33 @@
   flex-direction: row;
   flex-wrap: nowrap;
   margin-bottom: 1rem;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: $light-blue-gradient;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.5s linear;
+  }
 
   svg {
-    transition: all 0.1s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
   
   &:hover {
-    background: $light-blue-gradient;
     color: $white;
+
+    &::before {
+      opacity: 1;
+    }
   }
   transition: all 0.2s ease-in-out;
 }
