--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,14 +1,18 @@
 @import "@/styles/colors.scss";
+@import "@/styles/_typography.scss";
 
+.logo {
+  @extend .heading__700;
+  display: flex;
+  gap: 0.5rem;
+  color: $white;
+  max-width: 9.9275rem;
+  font-size: 1rem;
+  line-height: 1rem;
+}
 .logo_border {
   border-bottom: 2px solid $brand-600;
 }
 .map_page_logo {
   padding-bottom: 1rem;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
 }
