chore: updated logo text

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -12,7 +12,7 @@
   line-height: 1rem;
   padding-right: 0.5rem;
 
-& > span {
+& > img:last-child {
   display: none;
 
   @media (min-width: $tablet) {
